site/public/css/bootstrap.css
/* ... */
.alert-success h4 {
    color: #468847;
}

.alert-danger,
.alert-error {
    color: #b94a48;
    background-color: #f2dede;
    border-color: #eed3d7;
}

.alert-danger h4,
.alert-error h4 {
    color: #b94a48;
}

.alert-info {
    color: #3a87ad;
    background-color: #d9edf7;
    border-color: #bce8f1;
}

.alert-info h4 {
    color: #3a87ad;
}

.alert-block {
    padding-top: 14px;
    padding-bottom: 14px;
}

.alert-block > p,
.alert-block > ul {
    margin-bottom: 0;
}

.alert-block p + p {
    margin-top: 5px;
}

.label_forum {
  display: inline;
  padding: .2em .6em .3em;
  font-size: 65%;
  font-weight: bold;
  line-height: 2.5;
  color: #fff;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: .25em;
}

.label_forum:empty {
  display: none;
}
.label_forum-default {
  background-color: #777;
}
.label_forum-default[href]:hover,
.label_forum-default[href]:focus {
  background-color: #5e5e5e;
}
.label_forum-primary {
  background-color: #337ab7;
}
.label_forum-primary[href]:hover,
.label_forum-primary[href]:focus {
  background-color: #286090;
}
.label_forum-success {
  background-color: #5cb85c;
}
.label_forum-success[href]:hover,
.label_forum-success[href]:focus {
  background-color: #449d44;
}
.label_forum-info {
  background-color: #5bc0de;
}
.label_forum-info[href]:hover,
.label_forum-info[href]:focus {
  background-color: #31b0d5;
}
.label_forum-warning {
  background-color: #f0ad4e;
}
.label_forum-warning[href]:hover,
.label_forum-warning[href]:focus {
  background-color: #ec971f;
}
.label_forum-danger {
  background-color: #d9534f;
}
.label_forum-danger[href]:hover,
.label_forum-danger[href]:focus {
  background-color: #c9302c;
}

.btn-group-toggle > .btn,
.btn-group-toggle > .btn-group > .btn {
  margin-bottom: 0;
}

.btn-group-toggle > .btn input[type="radio"],
.btn-group-toggle > .btn input[type="checkbox"],
.btn-group-toggle > .btn-group > .btn input[type="radio"],
.btn-group-toggle > .btn-group > .btn input[type="checkbox"] {
  position: absolute;
  clip: rect(0, 0, 0, 0);
  pointer-events: none;
}

